--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1039,12 +1039,12 @@ This section discusses implementation of RBF-FD at a high level. Consider Algori
 
 Preprocessing encompasses details such as grid setup/generation, stencil generation and stencil weight calculations. As output from Preprocessing one expects one or more DMs representing the discrete differential operators. Assuming the grid nodes do not move, the DMs remain constant for the duration of the Application phase. Additionally, DMs can be loaded from disk on subsequent runs to bypass the cost of preprocessing. 
 
-In the Application phase, constructed/loaded DMs are applied to known solution values to solve the PDE either explicitly or implicitly. Although it is not mandatory, Algorithm~\ref{alg:rbffd_high_level} assumes that this phase includes a form of time-stepping. Time-stepping could be as simple as an Euler method ($u_{new} = u + \Delta t u'$)
-or more complex like Runge-Kutta where SolvePDE would be called for multiple steps and the results of each call would be weighted and combined within UpdateSolution.
+In the Application phase, constructed/loaded DMs are applied to known solution values to solve the PDE either explicitly or implicitly. Although it is not mandatory, Algorithm~\ref{alg:rbffd_high_level} assumes that this phase includes a form of time-stepping. Time-stepping could be as simple as an Euler update in which a single call to SolvePDE is necessary, or it could be a higher order Runge-Kutta update where SolvePDE is called multiple times, with the outputs weighted and combined within UpdateSolution. The choice of methods for this phase depend on the PDE. 
 
- As the number of time-steps increases, the cost of Application far outweighs the one-time cost of preprocessing; thus, this work focuses mostly on acceleration of Application where the impact of gains will be most significant. 
+As the number of time-steps increases, the cost of Application outweighs the one-time cost of preprocessing. Thus, efforts to accelerate RBF-FD should first focus on optimizations to the second phase. The steps in Preprocessing typically impact accuracy of the method and often-times the stability as well.
+In what follows we detail our choice of algorithms for preprocessing. Since the Application phase 
 
-
+This work focuses mostly on acceleration of Application where the impact of gains will be most significant. 
 
 %First, the method is not infallible; it faces similar conditioning issues as global/compact RBF method in that the success of the method depends on the choice of support parameter, $\epsilon$. Second, proper choice of $\epsilon$ varies based on the underlying node distribution, as well as the generated stencils. Third, the complexity of the method is low, but there are a few 
 
@@ -1053,7 +1053,7 @@ or more complex like Runge-Kutta where SolvePDE would be called for multiple ste
 \label{alg:rbffd_high_level}                           
 \textbf{Preprocessing:}
 \begin{algorithmic}[0]                   
-    \State Load or construct grid $\{x\}_{j=1}^N$ 
+    \State $\{x\}_{j=1}^N$ = GenerateGrid()
    	\For {$j = 1$ to $N$} \label{alg:stencil_gen} 
    	    \State Stencil $\{S_{j,i}\}_{i=1}^{n}$ = QueryNeighbors($x_j$)
    	\EndFor
@@ -1069,7 +1069,7 @@ or more complex like Runge-Kutta where SolvePDE would be called for multiple ste
     \State $t = t_{min}$                
     \While{ $t < t_{max}$ }
         \State $\{u'\} =$ SolvePDE($D_{\diffop{}}$, $\{u\}$)
-        \State $\{u\} =$ UpdateSolution($\{u'\}$, $\Delta t$)
+        \State $\{u\} =$ UpdateSolution($\{u\}$, $\{u'\}$, $\Delta t$)
         \State $t$ += $\Delta t$
     \EndWhile
 \end{algorithmic}
