--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -230,31 +230,31 @@ CPU, so data must be explicitly copied to/from global device memory on the GPU.
 \authnote{The basic primitives necessary to parallelize our problems: SpMV, AXPY and }
 
 
-\subsection{Overlapping Computation and Communication} 
-Need to describe our approach to launch 
-
-In simplest form (\& indicates an overlapped execution; overlapping is possible by non-blocking launches to the GPU before comm is started): 
-\begin{itemize} 
-\item $ U_{Q \backslash B}' = A_{Q \backslash B} U_{Q \backslash B}$ \& MPI\_alltoallv
-\item $ U_{B}' = A_{B} U_{B}$ 
-\end{itemize} 
-This form benefits because stencils are operated on in their entirety. For the GPU this is important because we maintain SIMD nature. 
-
-A more complex form which might overlap more comm and comp depending on the size of B (i.e., might be beneficial for large stencil sizes): 
-\begin{itemize} 
-\item $ U_{Q \backslash B}' = A_{Q \backslash B} U_{Q \backslash B}$ \& MPI\_alltoallv
-\item \& $ U_{B}' = A_{B \backslash R} U_{B \backslash R}$  (partial sparse vector product)
-\item $ U_{B}' += A_{R} U_{R}$ 
-\end{itemize} 
-
-Note that there is no non-blocking version of MPI\_alltoallv within the MPI standard, so the above two algorithms will not be overlapped when computing on the CPU. To overlap on the CPU, \cite{Kandalla2011} refers to the non-blocking collective as MPI\_ialltoallv. With a collective like this, we could enforce a pattern like: 
-\begin{itemize} 
-\item MPI\_alltoallv
-\item \& $ U_{Q \backslash B}' = A_{Q \backslash B} U_{Q \backslash B}$ 
-\item \& $ U_{B}' = A_{B \backslash R} U_{B \backslash R}$  (partial sparse vector product)
-\item MPI\_wait
-\item $ U_{B}' += A_{R} U_{R}$ 
-\end{itemize} 
+%\subsection{Overlapping Computation and Communication} 
+%Need to describe our approach to launch 
+%
+%In simplest form (\& indicates an overlapped execution; overlapping is possible by non-blocking launches to the GPU before comm is started): 
+%\begin{itemize} 
+%\item $ U_{Q \backslash B}' = A_{Q \backslash B} U_{Q \backslash B}$ \& MPI\_alltoallv
+%\item $ U_{B}' = A_{B} U_{B}$ 
+%\end{itemize} 
+%This form benefits because stencils are operated on in their entirety. For the GPU this is important because we maintain SIMD nature. 
+%
+%A more complex form which might overlap more comm and comp depending on the size of B (i.e., might be beneficial for large stencil sizes): 
+%\begin{itemize} 
+%\item $ U_{Q \backslash B}' = A_{Q \backslash B} U_{Q \backslash B}$ \& MPI\_alltoallv
+%\item \& $ U_{B}' = A_{B \backslash R} U_{B \backslash R}$  (partial sparse vector product)
+%\item $ U_{B}' += A_{R} U_{R}$ 
+%\end{itemize} 
+%
+%Note that there is no non-blocking version of MPI\_alltoallv within the MPI standard, so the above two algorithms will not be overlapped when computing on the CPU. To overlap on the CPU, \cite{Kandalla2011} refers to the non-blocking collective as MPI\_ialltoallv. With a collective like this, we could enforce a pattern like: 
+%\begin{itemize} 
+%\item MPI\_alltoallv
+%\item \& $ U_{Q \backslash B}' = A_{Q \backslash B} U_{Q \backslash B}$ 
+%\item \& $ U_{B}' = A_{B \backslash R} U_{B \backslash R}$  (partial sparse vector product)
+%\item MPI\_wait
+%\item $ U_{B}' += A_{R} U_{R}$ 
+%\end{itemize} 
 
 %K. Kandalla, H. Subramoni, K. Tomko, D. Pekurovsky, S. Sur and D.K. Panda, "High-performance and scalable non-blocking all-to-all with collective offload on InfiniBand clusters: a study with parallel 3D FFT", Computer Science - Research and Development, vol. 26(3-4):237-246, 2011.
 %T. Hoefler, A. Lumsdaine and W. Rehm, "Implementation and Performance Analysis of Non-Blocking Collective Operations for MPI", International Conference for High Performance Computing, Networking, Storage and Analysis (SC07), Reno, USA, 2007.
