Expanded outline based on discussion with Gordon. refining tasks necessary for thesis

--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1037,9 +1037,9 @@ In general, the larger the stencil size, the higher the order of the Laplacian. 
 
 This section provides an overview of how one implements RBF-FD. Consider Algorithm~\ref{alg:rbffd_high_level}. The algorithm is partitioned into two phases: preprocessing and application. The complexity of each phase depends on the choice of algorithms/method utilized for each task. 
 
-Preprocessing encompasses tasks such as grid setup/generation, stencil generation and stencil weight calculations. As output from preprocessing tasks one expects one or more DMs representing the discrete differential operators. Assuming the grid nodes do not move, the DMs remain constant for the duration of the second phase. Additionally, DMs can be loaded from disk on subsequent runs to bypass the cost of all tasks in preprocessing. 
+Preprocessing encompasses tasks such as grid setup/generation, stencil generation and stencil weight calculations. As output from these tasks one expects one or more DMs representing the discrete differential operators. Assuming the grid nodes do not move, the DMs remain constant for the duration of the second phase. Additionally, DMs can be loaded from disk on subsequent runs to effectively bypass the cost of all preprocessing. 
 
-The constructed DMs are applied in the second phase to known solution values to solve the PDE either explicitly or implicitly. For explicit solutions, the SolvePDE step evaluates a Matrix-Vector multiply. In the case of implicit solutions, SolvePDE inverts the DM via a direct or iterative linear system solve. Although it is not mandatory, many PDE solutions are time-dependent and require a time advancement scheme. The time-scheme could be as simple as an Euler update with a single call to SolvePDE. Alternatively, a higher order method (e.g., Runge-Kutta, Adams-Bashforth, etc.) may require multiple evaluations of SolvePDE, with the outputs weighted and combined within UpdateSolution. 
+The constructed DMs are applied in the Application phase to solve the PDE either explicitly or implicitly. For explicit solutions, this involves evaluating a Matrix-Vector multiply within the algorithmic step denoted as SolvePDE. In the case of implicit solutions, SolvePDE must invert the DM via a direct or iterative linear system solve. Although it is not mandatory, many PDE solutions are time-dependent and require some time advancement scheme. The time-scheme could be as simple as an Euler update with a single call to SolvePDE. Higher order methods (e.g., Runge-Kutta, Adams-Bashforth, etc.) may require multiple evaluations of SolvePDE, with the outputs weighted and combined within UpdateSolution. 
 
 When tuning the RBF-FD method for performance, one should focus on optimizations in SolvePDE. The one-time cost of preprocessing has significantly lower return of investment on tuning efforts compared to the compounded time savings of recurring DM applications. This is especially true for time-dependent PDEs where an increase in grid size results in proportional increase in time-steps. As the number of time-steps increases, the time spent in the application phase continues to increase and significantly outweighs the one-time cost of preprocessing. Preprocessing tasks typically impact accuracy of the method and often-times the stability as well. 
 
