--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -783,13 +783,15 @@ where $(c,k)$ represents the (row, column) index of $D_\diffop{}$ and vector $u 
 \left. \diffop{u(x)} \ \right|_{x = x_c} & \approx D_{\diffop{}}^{(c)} u \ \ .
 \end{align*}
 In the solution of PDEs the DMs are utilized in explicit and implicit modes. Here explicit implies evaluating the matrix-vector mulitply to get derivative values, $u'$, from explicitly known vector of solution values $u$: 
-\begin{align*}
+\begin{align}
 u' = D_{\diffop{}} u
-\end{align*}
+\label{eq:explicit_eq}
+\end{align}
 whereas implicit solves for unknown $u$:
-\begin{align*}
+\begin{align}
 D_{\diffop{}} u = f
-\end{align*}
+\label{eq:implicit_eq}
+\end{align}
 
 An example RBF-FD DM is illustrated in Figure~\ref{fig:example_DM_rows}. In this example, assume operator $\diffop{} = \pd{}{x}$ is approximated at all $N$ stencil centers of an arbitrary domain. RBF-FD weights assemble the rows of the differentiation matrix, $D_{x}$. On each row, weights are indicated by blue dots. The sparsity of rows reflects the subset of $\{x_k\}_{k=1}^N$ included in corresponding stencils of size $n$. On the right hand side, discrete derivative values $\d{u}{x}$ are approximated at all stencil centers. 
 
@@ -1030,22 +1032,12 @@ In general, the larger the stencil size, the higher the order of the Laplacian. 
 %TODO: show blocks for boundary conditions (annulus)
 %TODO: application (explicit/implicit solution)
 
-
-\part{WORKING BELOW}
-
 \section{Implementation}
 
 This section provides an overview of how one implements RBF-FD. Consider Algorithm~\ref{alg:rbffd_high_level}. The algorithm is partitioned into two phases: preprocessing and application. The complexity of each phase depends on the choice of algorithms/method utilized for each task. 
 
 Preprocessing encompasses tasks such as grid setup/generation, stencil generation and stencil weight calculations. As output from these tasks one expects one or more DMs representing the discrete differential operators. Assuming the grid nodes do not move, the DMs remain constant for the duration of the second phase. Additionally, DMs can be loaded from disk on subsequent runs to effectively bypass the cost of all preprocessing. 
 
-The constructed DMs are applied in the Application phase to solve the PDE either explicitly or implicitly. For explicit solutions, this involves evaluating a Matrix-Vector multiply within the algorithmic step denoted as SolvePDE. In the case of implicit solutions, SolvePDE must invert the DM via a direct or iterative linear system solve. Although it is not mandatory, many PDE solutions are time-dependent and require some time advancement scheme. The time-scheme could be as simple as an Euler update with a single call to SolvePDE. Higher order methods (e.g., Runge-Kutta, Adams-Bashforth, etc.) may require multiple evaluations of SolvePDE, with the outputs weighted and combined within UpdateSolution. 
-
-When tuning the RBF-FD method for performance, one should focus on optimizations in SolvePDE. The one-time cost of preprocessing has significantly lower return of investment on tuning efforts compared to the compounded time savings of recurring DM applications. This is especially true for time-dependent PDEs where an increase in grid size results in proportional increase in time-steps. As the number of time-steps increases, the time spent in the application phase continues to increase and significantly outweighs the one-time cost of preprocessing. Preprocessing tasks typically impact accuracy of the method and often-times the stability as well. 
-
-In what follows we discuss design decisions for preprocessing tasks. Chapter~\ref{chap:rbffd_multi_gpu} will cover the second phase in more detail. 
-
-%First, the method is not infallible; it faces similar conditioning issues as global/compact RBF method in that the success of the method depends on the choice of support parameter, $\epsilon$. Second, proper choice of $\epsilon$ varies based on the underlying node distribution, as well as the generated stencils. Third, the complexity of the method is low, but there are a few 
 
 \begin{algorithm}                      
 \caption{A High-Level View of RBF-FD}          
@@ -1075,13 +1067,34 @@ In what follows we discuss design decisions for preprocessing tasks. Chapter~\re
 \end{algorithm}
 
 
+The constructed DMs are applied in the Application phase to solve a PDE either explicitly or implicitly. Note that regardless of the explicit or implicit method, this phase reduces to a Sparse Matrix-Vector Multiply (SpMV) within the SolvePDE step. For explicit solutions, SolvePDE computes the SpMV in Equation~\ref{eq:explicit_eq}. In the implicit case, SolvePDE must invert the DM in Equation~\ref{eq:implicit_eq} via a direct or iterative linear system solve. Although it is not mandatory, many PDE solutions are time-dependent and require some time advancement scheme. The time-scheme could be as simple as an Euler update with a single call to SolvePDE. Higher order methods (e.g., Runge-Kutta, Adams-Bashforth, etc.) may require multiple applications of the DM, with the outputs weighted and combined within UpdateSolution. 
+
+Tuning the performance of the RBF-FD method requires one to focus on the Application phase. This is especially true for time-dependent PDEs where an increase in grid size results in proportional increase in the number time-steps. The recurring cost of computing an SpMV each time-step quickly amortizes the one-time cost of preprocessing. 
+ 
+On the other hand, preprocessing tasks have more impact on accuracy, stability and conditioning of the method. As each of these properties improve, the overall time to solution can decrease thanks to larger stable time-steps, smaller grid size, and fewer iterations in iterative linear system solves.
+
+Here we discuss various design decisions in implementing the preprocessing tasks for RBF-FD and consider potential impacts on performance (if any).  Chapter~\ref{chap:rbffd_multi_gpu} will discuss Application and SpMV performance in more detail. 
 
 \subsection{Grid } 
+
+Contrary to classic numerical methods like Finite Difference, Finite Volume and Finite Element, RBF-FD does not require 
+
+ depend on properly structured grids, well defined lattices, etc. RBF-FD does not. We can load or generate grids. 
+
+In Chapter~\ref{chap:explicit_implicit_pdes} we test the performance of our method with application to transient and steady-state PDEs. For the purpose of verification we demonstrate convergence for sets of grids previously published in the RBF literature. We briefly describe each type of grid and when it is used. 
+
+\subsubsection{Regular Grid}Regular grid is simplest and used for testing/debugging 
+
+\subsubsection{Maximum Determinant Nodes}
+For most tests on sphere we load MD node sets to confirm results with other RBF literature
+
+\subsubsection{Centroidal Voronoi Tessellations}For large node sets we also consider CVTs since they keep nodes from overlapping. Have I mentioned nodes should not coincide with RBF-FD? CVT simple algorithm (Lloyd’s)
 
 
 \subsection{On Choosing the Right $\epsilon$} 
 % TODO: expand missing content
 
+%First, the method is not infallible; it faces similar conditioning issues as global/compact RBF method in that the success of the method depends on the choice of support parameter, $\epsilon$. Second, proper choice of $\epsilon$ varies based on the underlying node distribution, as well as the generated stencils. Third, the complexity of the method is low, but there are a few 
 
 If solving for the weights directly (i.e., inverting Equation~\ref{eq:rbffd_weight_system}), one must carefully choose $\epsilon$ to prevent ill-conditioning. Numerous attempts exist in literature to provide ``good" functions for $\epsilon$ based on node spacing, $h$, stencil size $n$, etc. In general, the values provided are particular to the specific problem and/or grid under consideration. No fool-proof method exists to select the support parameters, so the prospect of hassle-free application of the RBF-FD method is still out of reach. 
 
@@ -1181,6 +1194,7 @@ To quantify the sparsity of a Differentiation Matrix we consider the ratio of no
 
 
 \chapter{A Distributed Multi-GPU RBF-FD Implementation}
+\label{chap:rbffd_multi_gpu}
 
 %\authnote{Related work for start of Parallel/GPU chapter}
 Parallel implementations of RBF methods currently rely on parallel domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
