--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1075,20 +1075,53 @@ On the other hand, preprocessing tasks have more impact on accuracy, stability a
 
 Here we discuss various design decisions in implementing the preprocessing tasks for RBF-FD and consider potential impacts on performance (if any).  Chapter~\ref{chap:rbffd_multi_gpu} will discuss Application and SpMV performance in more detail. 
 
-\subsection{Grid } 
+\subsection{Grid} 
 
-Contrary to classic numerical methods like Finite Difference, Finite Volume and Finite Element, RBF-FD does not require 
+An implementation of RBF-FD begins with the grid. The RBF-FD method has no requirement for structured grids, or for a well-refined mesh/lattice that limits connectivity between nodes. It operates both on structured grids and random point clouds; although, the choice of grid does impact the accuracy of the method. This freedom to function on domains of any shape, dimension, and granularity is a major selling point for RBF-FD and often impossible for many other PDE methods. 
 
- depend on properly structured grids, well defined lattices, etc. RBF-FD does not. We can load or generate grids. 
+%TODO: cubed, ying-yang
+% For example classic Finite Difference and many Finite Volume methods operate on regular/Cartesian grids. When operating on the sphere, it is common to encounter Cubed-spheres \cite{TODO:NairJablonowski08} and/or Ying-Yang grids in attempts to bypass the need for small time-steps and to alleviate troubling pole singularities common to Latitude/Longitude grids \cite{TODO}. Generalizations to unstructured meshes 
+% TODO: Discontinuous Galerkin? How deep do I want to go?
+%are possible for many methods (e.g., Finite Volume on multi-resolution \cite{RinglerJuGunzberger2008}) and Finite Element methods \cite{TODO}, but such methods still have a strong dependence on a Delaunay Triangulation or other mesh to determine the connectivity between nodes. 
 
-In Chapter~\ref{chap:explicit_implicit_pdes} we test the performance of our method with application to transient and steady-state PDEs. For the purpose of verification we demonstrate convergence for sets of grids previously published in the RBF literature. We briefly describe each type of grid and when it is used. 
+The choice of grid is only relevant to the extent that it impacts the connectivity between nodes in stencils. Connectivity translates to non-zeros in rows of the DMs, so the various grid distributions result in a number of sparsity patterns. For all other intents and purposes, the choice of grid is only relevant to ensure consistency with the PDEs to solve. 
+
+In the course of this work, we applied RBF-FD to a number of PDEs and grid distributions. Here we focus on the subset utilized in Chapter~\ref{explicit_implicit_pdes}. This subset is chosen for two reasons: a) to verify our solutions against existing methods, and b) easily construct refinements in 2D/3D for consistent benchmarking and convergence studies. 
+
+%In Chapter~\ref{chap:explicit_implicit_pdes} we test the performance of our method with application to transient and steady-state PDEs. For the purpose of verification we demonstrate convergence for sets of grids previously published in the RBF literature. We briefly describe each type of grid and when it is used. 
 
 \subsubsection{Regular Grid}Regular grid is simplest and used for testing/debugging 
+
+\begin{itemize}
+\item Benefits: besides a random grid, this is the simplest grid to generate.
+\item Pitfalls: the regular grid does not take advantage of RBF-FD method's ability to function on unstructured nodes. 
+\end{itemize}
 
 \subsubsection{Maximum Determinant Nodes}
 For most tests on sphere we load MD node sets to confirm results with other RBF literature
 
+\begin{itemize}
+\item Benefits: well studied refinements; many applications in RBF literature
+\item Pitfalls: limited resolution ($27556$ max); 
+\end{itemize}
+
+
 \subsubsection{Centroidal Voronoi Tessellations}For large node sets we also consider CVTs since they keep nodes from overlapping. Have I mentioned nodes should not coincide with RBF-FD? CVT simple algorithm (Lloyd’s)
+
+\begin{itemize}
+\item Benefits: theoretically unbounded resolution; converged grids have a sense of ``optimal" node placement; 
+\item Pitfalls: refinements are not direct; long time to convergence; limited to 1M nodes
+\end{itemize}
+
+\subsubsection{Other Grids}
+
+Other grids considered during the thesis, but not included in the applications below: 
+
+\begin{itemize}
+\item Anulus
+\item Nested Sphere CVT
+\item a
+\end{itemize}
 
 
 \subsection{On Choosing the Right $\epsilon$} 
