sending to workstation

--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1091,7 +1091,7 @@ In the course of this work, we applied RBF-FD to a number of PDEs and grid distr
 
 %In Chapter~\ref{chap:explicit_implicit_pdes} we test the performance of our method with application to transient and steady-state PDEs. For the purpose of verification we demonstrate convergence for sets of grids previously published in the RBF literature. We briefly describe each type of grid and when it is used. 
 
-\subsubsection{Regular Grid}For basic debugging and benchmarking purposes the most natural choice is to start with a regular or Cartesian grid. Equally spaced nodes in 1D, 2D or 3D are simple to generate and nodes are guaranteed to not be coincident.     
+\subsubsection{Regular Grid}For basic debugging and benchmarking purposes the most natural choice is to start with a regular or Cartesian grid. Equally spaced nodes in 1D, 2D or 3D are simple to generate and refinements (for convergence tests) are direct subsamples.     
 
 \begin{itemize}
 \item Benefits: besides a random grid, this is the simplest grid to generate.
