Added MD nodes to thesis

--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -13,7 +13,8 @@
 
 \chapter{Numerical Validation} 
 
-\label{sec:validation}
+\label{chap:explicit_implicit_pdes}
+%\label{sec:validation}
 
 \section{Choosing $\epsilon$}
 Present our attemps to get the right support parameter
