--- a/latex/iteration2.tex
+++ b/latex/iteration2.tex
@@ -50,11 +50,13 @@
 \include{distributed_solver}
 \include{RBFFD_as_SpMV}
 \include{SpMV_GPU}
-%\include{GMRES}
-%\include{ViennaCL.tex}
-%\include{future_of_gpus.tex}
-%\include{explicit_pde_solutions}
-%\include{implicit_pde_solutions}
+\include{GMRES}
+\include{ViennaCL.tex}
+\include{future_of_gpus.tex}
+
+
+\include{explicit_pde_solutions}
+\include{implicit_pde_solutions}
 
 
 
