--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1080,26 +1080,38 @@ Here we discuss various design decisions in implementing the preprocessing tasks
 An implementation of RBF-FD begins with the grid. The method has no requirement for structured grids, or for a well-refined mesh/lattice that limits connectivity between nodes. It operates both on structured grids and random point clouds; although, the choice of grid does impact the accuracy of the method. This freedom to function on domains of any shape, dimension, and granularity is a major selling point for RBF-FD and often impossible for many other PDE methods. 
 %Typically, the only constraint placed on the grid is that nodes should not coincide. If two nodes do coincide it is possible for a stencil to include both, and 
 
-\authnote{RBF-FD nodes should not coincide}
 %TODO: cubed, ying-yang
 % For example classic Finite Difference and many Finite Volume methods operate on regular/Cartesian grids. When operating on the sphere, it is common to encounter Cubed-spheres \cite{TODO:NairJablonowski08} and/or Ying-Yang grids in attempts to bypass the need for small time-steps and to alleviate troubling pole singularities common to Latitude/Longitude grids \cite{TODO}. Generalizations to unstructured meshes 
 % TODO: Discontinuous Galerkin? How deep do I want to go?
 %are possible for many methods (e.g., Finite Volume on multi-resolution \cite{RinglerJuGunzberger2008}) and Finite Element methods \cite{TODO}, but such methods still have a strong dependence on a Delaunay Triangulation or other mesh to determine the connectivity between nodes. 
 
-The choice of grid is only relevant to the extent that it impacts the connectivity between nodes in stencils. Connectivity translates to non-zeros in rows of the DMs, so the various grid distributions result in a number of sparsity patterns. For all other intents and purposes, the choice of grid is only relevant to ensure consistency with the PDEs to solve. 
+The choice of grid is only relevant to the extent that it impacts the connectivity between nodes in stencils. Connectivity translates to non-zeros in rows of the DMs, so the various grid distributions result in a number of sparsity patterns. For all other intents and purposes, the choice of grid is only pertinent to ensure consistency with the PDEs to solve. 
 
-In the course of this work, we applied RBF-FD to a number of PDEs and grid distributions. Here we focus on the subset utilized in Chapter~\ref{explicit_implicit_pdes}. This subset is chosen for two reasons: a) to verify our solutions against existing methods, and b) easily construct refinements in 2D/3D for consistent benchmarking and convergence studies. 
+In the course of this work, we applied RBF-FD to a number of PDEs and grid distributions. Here we focus on the subset utilized in Chapter~\ref{chap:explicit_implicit_pdes}. This subset is chosen for two reasons: a) to verify our solutions against existing methods, and b) easily construct refinements in 2D/3D for consistent benchmarking and convergence studies. 
 
 %In Chapter~\ref{chap:explicit_implicit_pdes} we test the performance of our method with application to transient and steady-state PDEs. For the purpose of verification we demonstrate convergence for sets of grids previously published in the RBF literature. We briefly describe each type of grid and when it is used. 
 
-\subsubsection{Regular Grid}For basic debugging and benchmarking purposes the most natural choice is to start with a regular or Cartesian grid. Equally spaced nodes in 1D, 2D or 3D are simple to generate. Additionally, refinements (for convergence tests) are direct subsamples. RBF-FD functions the same whether nodes are uniformly spaced or random. From this perspective, one can argue that regular grids do not fully exercise the advantages from RBF-FD. 
+\subsubsection{Regular Grid}For basic debugging and benchmarking purposes the most natural choice is to start with a regular or Cartesian grid. Equally spaced nodes in multiple dimensions are simple to generate. Additionally, refinements---for convergence tests---are direct subsamples. 
+
+In theory, RBF-FD functions the same whether nodes are uniformly spaced or random. However, regular grids do not fully exercise advantages that RBF-FD has over other methods with its ability to operate on scattered nodes.
+
 
 \subsubsection{Maximum Determinant Nodes}
 
-In Chapter~\ref{chap:explicit_implicit_pdes} we verify our RBF-FD implementation by solving PDEs on the unit sphere. Following the lead of many others in the RBF literature \cite{FlyerWright07,FlyerLehto10}, %TODO: need refs
-we test our solutions using the Maximum Determinant node sets. 
+In Chapter~\ref{chap:explicit_implicit_pdes} we verify our RBF-FD implementation by solving PDEs on the unit sphere. Following the lead of others in the RBF literature (e.g., \cite{FlyerWright07,FornbergLehto11}), %TODO: need refs
+we test our solutions on the Maximum Determinant (MD) node sets. 
 
-For most tests on sphere we load MD node sets to confirm results with other RBF literature
+MD node sets are 
+
+Node sets from 1024 to 27,556 are considered with stencil sizes ranging from17 to 101.
+\begin{figure} 
+\centering
+\includegraphics[width=0.4\textwidth]{rbffd_methods_content/grids/N4096_points.pdf} \includegraphics[width=0.4\textwidth]{rbffd_methods_content/grids/N8100_points.pdf}
+\caption{Example of $N=4096$ and $N=8100$ maximum determinant (MD) node sets on the unit sphere.} 
+\label{fig:md_nodes}
+\end{figure}
+
+
 
 \begin{itemize}
 \item Benefits: well studied refinements; many applications in RBF literature
